# Pallet_position_estimate

./: CMakeLists.txt  PROJECT_OVERVIEW_AND_ROADMAP.md  PROJECT_SUMMARY.md  README.md  REVIEW.md  package.xml  pyproject.toml  requirements.txt  setup.py
config/: default.yaml  realsense.yaml  ros1_noetic.yaml
docs/: README.md  architecture.md  configuration.md  data_preparation.md  modules.md  target_selection.md  troubleshooting.md  usage.md
ros/: CMakeLists.txt
ros/launch/: pallet_pose_from_topics.launch  pallet_pose_realsense.launch
scripts/: ros1_node.py  run_realsense_direct.py  run_ros1_node.py
src/pallet_pose_estimation/: __init__.py  assist_label.py  cli.py  config.py  detector.py  pose_output.py  preprocessing.py  realsense_node.py  realtime_pipeline.py  registration.py  rgbd.py  ros1_node.py  ros_utils.py  target_selector.py  visualization.py
tests/: test_assist_label.py  test_pose_output.py  test_realtime_pipeline_mock.py  test_realtime_pipeline_target_label.py  test_rgbd.py  test_ros_utils_intrinsics.py  test_ros_utils_pose.py  test_target_selector.py
